# scratchpad

./: .gitignore  Cargo.toml  PLAN.md  README.md  check_output.json  clippy_output.txt  display  download_fonts.py  hotspots.html
assets/: architecture_map_viewer.js
benches/: anchor_storage.rs  benchmark_targets.json  parallelism_baselines.rs  search_benchmark_targets.json  search_speed.rs  tab_stress.rs
docs/: Callout Style Guide  Settings UI.md  anchor-follow-up-execution-plan.md  anchor-storage-baseline-2026-04-29.md  button-spec.md  capacity-analysis-report.md  command-interface-open-with-plan.md  command-palette-plan.md  complexity-report-uncleaned.txt  complexity-report.txt  complexity.txt  context-menu-command-plan.md  contrast-color-plan.md  editor-capacity-parallelism-plan.md  editor-interaction-plan.md  egui-piece-tree-parallelism-plan.md  embedded-piece-tree-history-implementation-plan.md  external-file-change-plan.md  hybrid-piece-tree-evolution-plan.md  hybrid-storage-probe-report.md  large-file-path-integration-plan.md  latest-capacity-report-analysis.md  line-discrepancy-fix.md  measurement-dashboard-improvement-plan.md  measurement-tools.md  multi-encoding-support.md  multi-pane-architecture-plan.md  open-overview-capacity-review-2026-04-24.md  open-overview-visual-plan.md  parallelism-performance-plan.md  per-file-undo-session-plan.md  piece-table-phase0b.md  piece-table-progress-and-memory-plan.md  piece-tree-phase0c.md  plain-text-artifact-handling-plan.md  recent-capacity-regression-review.md  red-flash-code-review-report.md  red-flash.md  refterm-fast-read-output-rust-report.md  refterm-performance-review.md  (+24 more)
egui_inspect/: Cargo.toml
scripts/: ast_hasher.rs  capacity_report.py  ci.ps1  clone-alert-experimental.ps1  clone_alert.py  count_lines.rs  dashboard_server.py  generate_flamegraphs.py  hotspots.ps1  hotspots.py  (+16 more)
(+209 files in other folders)
