[package]
name = "scratchpad"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.1"
egui-phosphor = "0.12.0"
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
chardetng = "0.1"

[dev-dependencies]
rand = "0.10.0"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "tab_stress"
harness = false
