[package]
name = "scratchpad"
version = "0.2.0"
edition = "2024"
default-run = "scratchpad"

[dependencies]
eframe = "0.34.1"
egui-phosphor = "0.12.0"
rfd = "0.14"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
chardetng = "0.1"
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }

[dev-dependencies]
rand = "0.10.0"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "tab_stress"
harness = false

[[bench]]
name = "search_speed"
harness = false

[[bin]]
name = "ast_hasher"
path = "scripts/ast_hasher.rs"

[[bin]]
name = "count_lines"
path = "scripts/count_lines.rs"
